--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Login</title>
-		<script src="https://accounts.google.com/gsi/client" defer></script>
+	<script src="https://accounts.google.com/gsi/client" async defer></script>
+	<title>Login</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
