--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
+		<link rel="shortcut icon" href="codojo.ico">
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 	<script src="https://accounts.google.com/gsi/client" async defer></script>
-	<title>Login</title>
+	<title>Login | Codojo</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
