metrics of classes add

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+	<link href="https://fonts.googleapis.com/css?family=Play&display=swap" rel="stylesheet">
+
 	<script src="https://accounts.google.com/gsi/client" async defer></script>
 	<title>Login | Codojo</title>
 	</head>
