--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
-		<link rel="shortcut icon" href="codojo.ico">
+		<link rel="shortcut icon" href="taffi.ico">
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +27,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 	<script src="https://accounts.google.com/gsi/client" async defer></script>
-	<title>Login | Codojo</title>
+	<title>Login | Taffi</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
